refactor(selection): 优化活动响应组装减少数据库查询
- 提取 toResponses 方法实现批量组装学期名、组名及时段限制
- 替换列表接口中单条活动多次查询的 N+1 查询问题
- 使用内存合并方式批量加载关联信息提升效率
- 简化原有的 toResponse 方法逻辑，避免重复查询
- 调整过滤后绑定组ID的流程适配新响应结构
- 保持接口功能一致，提升性能和代码可维护性